docs: update README with detailed run instructions for Eclipse and terminal